<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="org.coursera.formulariocontacto.ActividadPrincipal">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/svFormularioDatosContacto" >


        <LinearLayout
            android:id="@+id/llFormularioDatosContacto"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">


            <LinearLayout
                android:id="@+id/llIngresoDatos"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/tilIngresoNombreContacto"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/tietIngresoNombreContacto"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/activida_principal_nombre_contacto"
                        android:textColor="@color/colorBackground"/>

                </android.support.design.widget.TextInputLayout>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/activida_principal_fecha_contacto"
                    android:textAlignment="center"
                    android:layout_marginBottom="@dimen/actividad_confirmar_datos_margin_bot_titulo_date"
                    android:layout_marginTop="@dimen/actividad_confirmar_datos_margin_top_titulo_date"/>

                <DatePicker
                    android:id="@+id/dpFechaNacimientoContacto"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:datePickerMode="spinner"
                    android:layout_marginBottom="@dimen/actividad_confirmar_datos_margin_bot_date"
                    style="@style/MyDatePicker"/>

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/tilIngresoTelefonoContacto"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/tietIngresoTelefonoContacto"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/activida_principal_telefono_contacto"
                        android:inputType="number"/>

                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/tilIngresoEmailContacto"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/tietIngresoEmailContacto"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/activida_principal_email_contacto"
                        android:inputType="textEmailAddress"/>

                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/tilIngresoDescripcionContacto"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/tietIngresoDescripcionContacto"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/activida_principal_descripcion_contacto"/>

                </android.support.design.widget.TextInputLayout>

            </LinearLayout>

            <Button
                android:id="@+id/btnIngresoDatosFormulario"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/activida_principal_texto_boton_siguiente"
                android:onClick="siguiente"
                android:background="@color/colorPrimary"
                android:textColor="@color/letraBoton"
                android:layout_marginTop="@dimen/acividad_confirmar_datos_tamanho_padding_componentes"/>


        </LinearLayout>
    </ScrollView>

</RelativeLayout>
